<resources>
    <string name="app_name">FoodKeeper</string>
    <string name="search_item">Search item</string>
    <string name="email">Email :</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="create_meal_plan">Create meal plan</string>
    <string name="x_cancel">Cancel</string>
    <string name="meal">Meal</string>
    <string name="delete">Delete</string>
    <string name="edit_meal">Edit meal</string>
    <string name="breakfast">Breakfast</string>
    <string name="last_used">Last used :</string>
    <string name="restock">Restock</string>
    <string name="sort_by">Sort by:</string>
    <string name="name">Name :</string>
    <string name="create_meal">Create meal</string>
    <string name="api_key">09f32648ad3a47af9048f4ff42147caf</string>
    <string name="Recipe">Recipe</string>
    <string name="snack">Snack</string>
    <string name="add_item">Add item</string>
    <string name="clear_plan">Clear Plan</string>
    <string name="save_meal">Save meal</string>
</resources>