<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_meal_plan"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/selected_day_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Thursday, 10 April"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Breakfast Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/breakfast"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/breakFastLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:background="@drawable/grey_button"
                android:scaleType="center" />

            <Button
                android:id="@+id/breakFastBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/add_meal_plan" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/breakFastContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>


    <!-- Lunch Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lunch"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/lunchLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:background="@drawable/grey_button"
                android:scaleType="center" />

            <Button
                android:id="@+id/lunchBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/add_meal_plan" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/lunchContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <!-- Dinner Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey"

            android:text="@string/dinner"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:id="@+id/dinnerLayout"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:background="@drawable/grey_button"
                android:scaleType="center" />

            <Button
                android:id="@+id/DinnerBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/add_meal_plan" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/dinnerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <!-- Snack Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Snack"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/snackLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:background="@drawable/grey_button"
                android:scaleType="center" />

            <Button
                android:id="@+id/snackBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/add_meal_plan" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/snackContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <!-- Action Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:background="@drawable/blue_button"
            android:backgroundTint="@color/grey"
            android:text="@string/x_cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:text="Save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>